force-app/main/default/objects/Work_Step_Answer_Mapping__c/Work_Step_Answer_Mapping__c.object-meta.xml
<CustomObject>
    <description>MSRS-231

Custom Object to be used as a junction-type object between Work Step Answers and SPOT Code Mappings. This object is used to pre-fill Work Step Answers by recording spot codes and required object/fields.</description>
    <label>Work Step Answer Mapping</label>
    <nameField>
        <label>Work Step Answer Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Step Answer Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>