force-app/main/default/objects/Work_Step_Answer_Mapping__c/fields/MSN_FROM_Object__c.field-meta.xml
<CustomField>
    <fullName>MSN_FROM_Object__c</fullName>
    <description>Is used to define, from which object to retrieve information from that should be prepopulated into the &quot;Work Step Answer&quot;</description>
    <inlineHelpText>Please enter the API Name of the object you would like to retrieve the prepopulated answer from</inlineHelpText>
    <label>Prepopulated Answer - Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
            <value>
                <fullName>ServiceAppointment</fullName>
                <label>Service Appointment</label>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
                <label>Work Order</label>
            </value>
            <value>
                <fullName>WorkOrderLineItem</fullName>
                <label>Work Order Line Item</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>