force-app/main/default/objects/Work_Step_Answer_Mapping__c/fields/MSN_FROM_Object_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_FROM_Object_Field_API_Name__c</fullName>
    <description>This must be the API name of the FIELD that is on the object listed in the FROM OBJECT</description>
    <inlineHelpText>Please enter the API Name of the FIELD that is on the object listed in the &quot;FROM Object&quot; field in order to prepopulate that information into the &quot;Work Step Answer&quot; field</inlineHelpText>
    <label>Prepopulated Answer - Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>