force-app/main/default/objects/Work_Step_Answer_Mapping__c/fields/MSN_SPOT_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_SPOT_Code__c</fullName>
    <formula>MSN_Work_Step_Template__r.MSN_SPOT_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPOT Code</label>
    <type>Text</type>
</CustomField>