force-app/main/default/objects/Work_Step_Answer_Mapping__c/fields/MSN_Work_Step_Template__c.field-meta.xml
<CustomField>
    <fullName>MSN_Work_Step_Template__c</fullName>
    <description>Links the Work Step Answer Mapping to its parent Work Step Template</description>
    <label>Work Step Template</label>
    <referenceTo>WorkStepTemplate</referenceTo>
    <relationshipLabel>Work Step Answer Mappings</relationshipLabel>
    <relationshipName>Work_Step_Answer_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>